--- a/submissions/mcclellan_julian/a2/experiment.Rmd
+++ b/submissions/mcclellan_julian/a2/experiment.Rmd
@@ -29,13 +29,14 @@ screen_stack <- screening_dat %>%
     ggplot(aes(x = group, fill = color)) + 
       geom_bar(position = "stack") +
       labs(y = "height",
-           x = "", title = "Plot 1. Screen Stack Plot.")
+           x = "", title = "Plot 1a. Screen Stack Plot.")
 
 screen_dodge <- screening_dat %>%
     ggplot(aes(x = group, fill = color)) + 
       geom_bar(position = "dodge") +
       labs(y = "height",
-           x = "")
+           x = "",
+           title = "Plot 1b. Screen Dodge Plot.")
 ```
 
 ```{r fake_data, echo=FALSE, message=FALSE}
@@ -50,7 +51,8 @@ test_stack <- fake_dat %>%
   ggplot(aes(y = height, x = group, fill = color)) +
     geom_col(position = "stack") + 
     scale_x_discrete() + 
-    labs(x = "")
+    labs(x = "",
+         title = "Plot 2b. Test Stack Plot")
 
 test_dodge <- fake_dat %>%
   group_by(group, color) %>%
@@ -60,7 +62,7 @@ test_dodge <- fake_dat %>%
     geom_col(position = "dodge") + 
     scale_x_discrete() +
     labs(x = "",
-         y = "height", title = "Plot 2. Test Dodge Plot.")
+         y = "height", title = "Plot 2a. Test Dodge Plot.")
 
 gonly <- fake_dat %>% filter(color == "green")
 
@@ -76,16 +78,16 @@ In this assignment, we expand this idea arguing that the context of the position
 ### Methods 
 To test this hypothesis, we designed an experiment consisting of one task: estimating the sum of bar heights from a plot. The participants have to read the heights of two bars (the green bars) from data divided into two groups in the same plot and add the heights to create a total height. To compare the effect that stacked vs. dodge positioning of information has on the participants' ability to estimate the bars' sum, the data is presented in two different types of plots: one stacked and the other dodged. 
 
-Moreover, to test the accuracy of the experimental procedure, participants are asked to perform the task twice; First, with two _screen_ plots (one stacked and one dodged) and with one _test_ plot. Both plot sets consist of one stack and one dodge plot. The _screen_ set of plots were created with data randomly generated with the purpose of setting a validity benchmark for the data; how accurately participant can extract information with an easy version of the tasks. (Plot 1) The bar heights are more precise and thus easier to sum in the _screen_ plots, while the bar heights in the _test_ plots are less precise.
+Moreover, to test whether a participant's answers were reliable, participants are asked to perform a screening task. Each participant was exposed to both of the two plots below, and asked to calculate the total height of the green bars. In both cases, the total height is `2` and it is easy to deduce from the image.
 
 
 ```{r, echo=FALSE}
 screen_stack
+screen_dodge
 ```
 
 
-Then, randomly, we assigned each participant to one plot from the _test_ set; a stacked or a dodged plot. (Plot 2) The participant has to estimate the total height of the green bars for this task. The data for this experiment was collected through a survey developed in Qualtrics and deployed through the online platform Mechanical Turk from Amazon. Data from this experiment was collected from a 100 participants, 50 to each plot type. The data was cleaned, transformed (the results were separated into a stack, dodge and all results data set), and analyzed. Those participants who were unable to answer the first two screening questions correctly were omitted. This resulted in 21/50 valid observations for the stacked chart and 30/50 valid observations for the dodged chart. For this experiment, we developed two variables. The independent variable is the type of plot (stack or dodge), and it is operationalized as the type of plot presented to the participants. The dependent variable is the sum of green bar heights estimated by the participant. 
-
+Then, randomly, we assigned each participant to one plot from the _test_ set; a stacked or a dodged plot. (Plot 2a or 2b) The participant has to estimate the total height of the green bars for this task. The data for this experiment was collected through a survey developed in Qualtrics and deployed through the online platform Mechanical Turk from Amazon. Data from this experiment was collected from a 100 participants, 50 to each plot type. The data was cleaned, transformed (the results were separated into a stack, dodge and all results data set), and analyzed. Those participants who were unable to answer the first two screening questions correctly were omitted resulting in 21/50 valid observations for the stacked chart and 30/50 valid observations for the dodged chart.
 
 ```{r save_plots, echo=FALSE, message=FALSE}
 # ggsave("screen_stack.png", device = "png", plot = screen_stack, dpi = 100, width = 6, height = 4)
@@ -93,12 +95,13 @@ Then, randomly, we assigned each participant to one plot from the _test_ set; a 
 # ggsave("test_stack.png", device = "png", plot = test_stack, dpi = 100, width = 6, height = 4)
 # ggsave("test_dodge.png", device = "png", plot = test_dodge, dpi = 100, width = 6, height = 4)
 test_dodge
+test_stack
 ```
 
 
 ### Data Summary
 
-Below (Plot 3) shows the density distributions of participants responses: the total sum of the height of the two green bars in the plot. The data is presented according to the randomly assigned plot to the participant: stacked or dodge. The plot suggests that the sums of green bars estimated from the stack plot have less variance than the sums estimated from the dodge plot, which has a flatter distribution of estimated sums, with what seems like a left-skew.
+Below (Plot 3) shows the density distributions of participants responses: the total sum of the height of the two green bars in the plot. The data is presented according to the randomly assigned plot to the participant: stacked or dodge. The plot suggests that the sums of green bars estimated from the stack plot have less variance than the sums estimated from the dodge plot, which has a flatter distribution of estimated sums, with what seems like a slight left-skew.
 
 
 ```{r results, echo=FALSE, message=FALSE, warning=FALSE}
